# blog

./: .gitignore  Cargo.toml  README.md
bash-scripting/: README.md
builder_pattern/src/: main.rs
docker-express-tutorial/: .dockerignore  Dockerfile  hey.js  index.js  package-lock.json  package.json
kafka-nodejs/: consumer-auth.js  consumer.js  producer-auth.js  producer.js
redis-rust/: Cargo.toml  docker-compose.yaml
redis-rust/src/: error.rs  kv_store.rs  main.rs  redis.rs
regex-in-rust/date-format/: Cargo.toml
regex-in-rust/date-format/src/: main.rs
regex-in-rust/password-strength/: Cargo.toml
regex-in-rust/phone-number/: Cargo.toml
rust-guides/builder_pattern/: Cargo.toml
rust-totp-2fa/: .env  .gitignore  Cargo.toml  Justfile  rustfmt.toml
rust-totp-2fa/migration/: Cargo.toml
rust-totp-2fa/migration/src/: lib.rs  m20260312_214553_create_user_table.rs  m20260313_080357_create_totp_config.rs
rust-totp-2fa/src/: lib.rs
rust-totp-2fa/src/adapters/: jwt.rs  mod.rs  response.rs  users.rs
rust-totp-2fa/src/entities/: mod.rs  prelude.rs  totp_settings.rs  users.rs
rust-totp-2fa/src/errors/: app_error.rs  auth_error.rs  mod.rs  repository_error.rs  service_error.rs
rust-totp-2fa/src/repositories/: mod.rs  totp_settings.rs  users.rs
rust-totp-2fa/src/services/: users.rs
rust-totp-2fa/src/utils/: env.rs  mod.rs
tsc-knight/: app.js  app.ts  knighthood.http  knights  package-lock.json  package.json
tsc-knight/datasource/: config.ts  models.ts
tsc-knight/pkg/: index.ts
tsc-knight/router/: index.ts
tsc-knight/validators/: index.ts
(+6 files in other folders)
