[package]
name = "rust-totp-2fa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
dotenv = "0.15.0"
sanitizer = { version = "1.0.0", features = ["derive"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "with-uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.22.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
